@startuml content-er

!include ../_styles.iuml

title <size:16><b>Content Domain</b></size>\n<size:11><color:#60727F>Folder · Pack · Question · Option</color></size>

entity "folders" as Folder <<content>> {
    PK(id)              : TEXT
    ==
    name                : TEXT  NOT NULL
    FK(parentId)        : TEXT  NULL
    colorHex            : TEXT  NULL
    icon                : TEXT  NULL
    createdAt           : INTEGER NOT NULL
    updatedAt           : INTEGER NOT NULL
}

entity "packs" as Pack <<content>> {
    PK(id)              : TEXT
    ==
    FK(folderId)        : TEXT  NOT NULL
    title               : TEXT  NOT NULL
    description         : TEXT  NULL
    icon                : TEXT  NULL
    colorHex            : TEXT  NULL
    createdAt           : INTEGER NOT NULL
    updatedAt           : INTEGER NOT NULL
}

entity "questions" as Question <<content>> {
    PK(id)              : TEXT
    ==
    text                : TEXT  NOT NULL
    explanation         : TEXT  NULL
    difficulty          : TEXT  NOT NULL
    ..DifficultyLevel: EASY|MEDIUM|HARD|EXPERT..
    createdAt           : INTEGER NOT NULL
    updatedAt           : INTEGER NOT NULL
}

entity "options" as Option <<content>> {
    PK(id)              : TEXT
    ==
    FK(questionId)      : TEXT  NOT NULL
    label               : TEXT  NOT NULL
    text                : TEXT  NOT NULL
    isCorrect           : INTEGER NOT NULL
    createdAt           : INTEGER NOT NULL
    updatedAt           : INTEGER NOT NULL
}

entity "pack_questions" as PackQuestion <<join>> {
    PK(packId)          : TEXT
    PK(questionId)      : TEXT
    ==
    sortOrder           : INTEGER NOT NULL
}

Folder      ||--o{  Folder          : "parentId / CASCADE (self)"
Folder      ||--o{  Pack            : "folderId / CASCADE"
Question    ||--|{  Option          : "questionId / CASCADE"
Pack        ||--o{  PackQuestion    : "packId / CASCADE"
Question    ||--o{  PackQuestion    : "questionId / CASCADE"

note bottom of PackQuestion
  Una Question puede pertenecer
  a multiples Packs.
  sortOrder define el orden
  dentro de cada Pack.
end note

@enduml
